# twitch-cast

./: .gitignore  .travis.yml  README.md  deploy.sh  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  nginx.conf  streamer.Dockerfile  vlc.Dockerfile
backend/: twitch-cast-backend.cabal
backend/app/: Main.hs
backend/app/Server/: HLSProxy.hs  ProgramOptions.hs  Stream.hs  Web.hs
backend/src/Streamer/: Prelude.hs
backend/src/Twitch/: API.hs  Types.hs
chromecast/: receiver.html  sender.html
frontend/: nginx.conf
frontend/builder/: Dockerfile
frontend/chromecast/: sender.html
frontend/chromecast/sender/: .bowerrc  .gitignore  Dockerfile  bower.json  gulpfile.js  package.json
frontend/receiver/: index.html  receiver.css  receiver.js
frontend/receiver/app/: index.html  package.json  styles.css  webpack.config.js
frontend/receiver/builder/: Dockerfile  watch.sh
frontend/receiver/src/: chat_assets.js  chat_line.js  receiver.js
frontend/receiver/tags/: app.tag  chat-line.tag  chat.tag  clock.tag  notice.tag  pause-indicator.tag  stream-info.tag  stream.tag
frontend/sender/: .bowerrc  Dockerfile  bower.json  gulpfile.js  package.json
frontend/sender/app/: index.html  package.json  webpack.config.js
frontend/sender/builder/: watch.sh
frontend/server/: Dockerfile  cors.conf  nginx.conf
frontend/src/receiver/: chat.js  index.html  receiver.css  receiver.js  stream.js
hls-proxy/: Dockerfile  api.py  hls.py  utils.py  vlc_proxy.sh
hls-proxy/schemas/: watch.schema.json
scripts/: dev  prod
streamer/: Dockerfile  api.py  events.py  hls.py  process.py  stream.sh  streaming.py  twitch-cast-streamer.cabal  utils.py  ws.py
streamer/app/Server/: HLSProxy.hs  ProgramOptions.hs  Stream.hs  Types.hs  Web.hs
streamer/schemas/: monitor.schema.json
streamer/scripts/: wait_for_host.sh
streamer/src/Twitch/: API.hs  Playlist.hs
(+121 files in other folders)
